# AIMS

./: CLAUDE.md
.claude/: settings.local.json
backend/: .env  .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/agent/: chat.py  llm.py  prompt.py  tools.py
backend/app/mcp/: server.py  tools.py
backend/app/models/: analytics.py  chat.py  survey.py
backend/app/routers/: analytics.py  chat.py  surveys.py
backend/app/services/: dashboard.py  language.py
backend/app/services/analytics/: __init__.py  aggregation.py  analysis.py  clustering.py  data_loader.py  hashing.py  job_registry.py  llm_io.py  orchestrator.py  prompts.py  repository.py  schemas.py  sql_branch.py  summarization.py  synthesis.py  token_budget.py
backend/migrations/: 001_ai_chat_tables.sql  002_analytics_report.sql  003_analytics_report_date_filter.sql  004_analytics_report_submissions_limit.sql
backend/tests/analytics/: test_clustering.py  test_hashing.py  test_llm_io_retry.py  test_prompts_smoke.py  test_stage2_aggregate.py  test_token_budget.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.vue  LanguageBadge.vue  SurveyEntryDialog.vue
frontend/src/components/analytics/: ExecutiveSummaryCard.vue  KeyMetricsStrip.vue  PrintStyles.css  TopTopicsBar.vue  (+6 more)
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: main.css
frontend/src/views/: AnalyticsReportView.vue  LoginView.vue  SurveyListView.vue
(+6 files in other folders)
